testsuite/tests/name_resolution/non_visible_dependency/test.out
Analyzing foo.ads
#################

Analyzing test.adb
##################

Resolving xrefs for node <CallStmt test.adb:3:4-3:12>
*****************************************************

Name resolution failed as expected with:

test.adb:3:4: error: no such entity
3 |    Foo.Bar;
  |    ^^^



Done.
